Fix compact city control spacing

--- a/styles.css
+++ b/styles.css
@@ -1597,6 +1597,15 @@ html.is-telegram .shell-favorite {
   height: 38px;
 }
 
+html.is-telegram .location-pill {
+  padding: 4px 9px;
+}
+
+html.is-telegram .location-pill b {
+  margin-top: 2px;
+  font-size: 7px;
+}
+
 html.is-telegram .shell-favorite {
   width: 38px;
 }
@@ -2283,6 +2292,11 @@ html.is-telegram .tab svg {
   .location-pill,
   .shell-favorite {
     height: 34px;
+  }
+
+  .location-pill {
+    padding-top: 3px;
+    padding-bottom: 3px;
   }
 
   .shell-favorite {
